update plugin to 0.2 version (release)